5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1592_1801.log
== TEST (2019-03-23 12:17:09) 
-- CODE:
F = input("Abra +" .)
N = float(input("Repeticoes:"))

C = F * N
print(C)

-- ERROR:
File "XXXX", line 1
    F = input("Abra +" .)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:17:16) 
-- CODE:
F = input("Abra +")
N = float(input("Repeticoes:"))

C = F * N
print(C)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = F * N
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:18:55) 
-- CODE:
F = input("Abra" +)
N = float(input("Repeticoes:"))

C = F * N
print(C)

-- EXECUTION TIME:
0.132049
-- ERROR:
  File "/home/codebench/codes/1592/1801/main.py", line 1
    F = input("Abra" +)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:48:58) 
-- CODE:
F = input("Abra +")
N = float(input("Repeticoes:"))

C = F * N
print(C)

-- EXECUTION TIME:
0.137953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 4, in <module>
    C = F * N
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:49:01) 
-- CODE:
F = input("Abra +")
N = float(input("Repeticoes:"))

C = F * N
print(C)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = F * N
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:50:17) 
-- CODE:
F = input("Abra +")
N = float(input("Repeticoes:"))

C = (F * N)

print(C)

-- EXECUTION TIME:
0.140225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 4, in <module>
    C = (F * N)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:51:06) 
-- CODE:
F = input("Abra" + " ")
N = float(input("Repeticoes:"))

C = F * N

print(C)

-- EXECUTION TIME:
0.118182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 4, in <module>
    C = F * N
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:51:45) 
-- CODE:
F = input("Abra" + " ")
N = float(input("Repeticoes:"))

C = F * N

print(C)

-- EXECUTION TIME:
0.174005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 4, in <module>
    C = F * N
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:51:47) 
-- CODE:
F = input("Abra" + " ")
N = float(input("Repeticoes:"))

C = F * N

print(C)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = F * N
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:52:43) 
-- CODE:
F = input("Abra" + " ")
N = input("Repeticoes:")

C = F * N

print(C)

-- EXECUTION TIME:
0.142398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 4, in <module>
    C = F * N
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:53:07) 
-- CODE:
F = input("Abra" + " ")
N = float(input("Repeticoes:"))

C = float(F * N)

print(C)

-- EXECUTION TIME:
0.131779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 4, in <module>
    C = float(F * N)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:53:15) 
-- CODE:
F = input("Abra" + " ")
N = float(input("Repeticoes:"))

C = float(F * N)

print(C)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = float(F * N)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:53:54) 
-- CODE:
F = input("Abra" + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- EXECUTION TIME:
0.150956
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:54:18) 
-- CODE:
F = input("Abra" + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- EXECUTION TIME:
0.133573
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:54:19) 
-- CODE:
F = input("Abra" + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:55:27) 
-- CODE:
F = input(Abra + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    F = input(Abra + " ")
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:55:44) 
-- CODE:
F = input("Abra" + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- EXECUTION TIME:
0.140493
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:55:46) 
-- CODE:
F = input("Abra" + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:56:30) 
-- CODE:
F = input("Abra" + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- EXECUTION TIME:
0.193555
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:56:31) 
-- CODE:
F = input("Abra" + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:57:10) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- EXECUTION TIME:
0.135428
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra  livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra  carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra  caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:57:11) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- OUTPUT:
Abra  livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:50:41) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = F * N

print(C)

-- OUTPUT:
Abra  livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:51:17) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = F * N

print("abra" + C)

-- EXECUTION TIME:
0.139043
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra  abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra  abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra  abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:51:20) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = F * N

print("abra" + C)

-- OUTPUT:
Abra  abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:58:33) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = F * N

print("Abra " + C)

-- OUTPUT:
Abra  Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:59:08) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = F * N

print("Abra  + C ")

-- EXECUTION TIME:
0.124721
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra  Abra  + C
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra  Abra  + C
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra  Abra  + C
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:59:12) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = F * N

print("Abra " + C)

-- EXECUTION TIME:
0.250164
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra  Abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra  Abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra  Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:00:19) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = Abra F * N

print(C)

-- EXECUTION TIME:
0.224003
-- ERROR:
  File "/home/codebench/codes/1592/1801/main.py", line 4
    C = Abra F * N
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:00:22) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = Abra F * N

print(C)

-- ERROR:
File "XXXX", line 4
    C = Abra F * N
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:00:40) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = Abra + F * N

print(C)

-- EXECUTION TIME:
0.132698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 4, in <module>
    C = Abra + F * N
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:01:08) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = "Abra" + F * N

print(C)

-- OUTPUT:
Abra  Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:01:41) 
-- CODE:
F = input("Abra " + " ")
N = int(input("Repeticoes:"))

C = ("Abra" + F) * N

print(C)

-- OUTPUT:
Abra  AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:01:54) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra" + F) * N

print(C)

-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:02:17) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra " + F) * N

print(C)

-- EXECUTION TIME:
0.120952
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:02:19) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra " + F) * N

print(C)

-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:03:01) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra " + "F ") * N

print(C)

-- EXECUTION TIME:
0.199441
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra F Abra F Abra F Abra F Abra F Abra F Abra F Abra F
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra F Abra F
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra F
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:03:04) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra " + "F ") * N

print(C)

-- OUTPUT:
Abra F Abra F Abra F Abra F Abra F Abra F Abra F Abra F
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:03:11) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra " + "F ") * N

print(C)

-- EXECUTION TIME:
0.123087
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra F Abra F Abra F Abra F Abra F Abra F Abra F Abra F
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra F Abra F
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra F
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:03:12) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra " + "F ") * N

print(C)

-- OUTPUT:
Abra F Abra F Abra F Abra F Abra F Abra F Abra F Abra F
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:03:43) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra " + F ) * N

print(C)

-- EXECUTION TIME:
0.17685
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:03:45) 
-- CODE:
F = input("Abra " )
N = int(input("Repeticoes:"))

C = ("Abra " + F ) * N

print(C)

-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:03:56) 
-- CODE:
F = input("Abra" )
N = int(input("Repeticoes:"))

C = ("Abra " + F ) * N

print(C)

-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:04:19) 
-- CODE:
F = input("Abra" )
N = int(input("Repeticoes:"))

C = (" Abra " + F ) * N

print(C)

-- EXECUTION TIME:
0.15504
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:56:02) 
-- CODE:
F = input("Abra" )
N = int(input("Repeticoes:"))

C = (" Abra " + F ) * N

print(C)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
